--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "version": "1.0.0",
+  "description": "Personal blog where to post my thoughts, learnings and guides",
+  "author": "XAERdev",
   "private": true,
   "scripts": {
     "dev": "next",
@@ -13,6 +16,7 @@
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "typescript": "^4.7.4"
